# banana-slides

./: .env.example  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  README.md  README_EN.md  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  app.py  config.py
backend/controllers/: export_controller.py  material_controller.py  page_controller.py  project_controller.py  reference_file_controller.py  settings_controller.py
backend/models/: settings.py
backend/services/: ai_service.py  export_service.py  file_parser_service.py  prompts.py  task_manager.py
backend/services/ai_providers/: __init__.py  lazyllm_env.py
backend/services/ai_providers/image/: __init__.py  genai_provider.py  lazyllm_provider.py  openai_provider.py
backend/services/ai_providers/text/: __init__.py  lazyllm_provider.py
backend/tests/unit/: test_file_parser_service.py
backend/utils/: image_utils.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: ui-full-flow.spec.ts
frontend/src/api/: endpoints.ts
frontend/src/components/outline/: OutlineCard.tsx
frontend/src/components/preview/: DescriptionCard.tsx  SlideCard.tsx
frontend/src/components/shared/: ConfirmDialog.tsx  ContextualStatusBadge.tsx  ImagePreviewList.tsx  Markdown.tsx  MarkdownTextarea.tsx  MaterialGeneratorModal.tsx  Modal.tsx  ProjectSettingsModal.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/hooks/: useImagePaste.ts
frontend/src/pages/: DetailEditor.tsx  History.tsx  Home.tsx  Landing.tsx  OutlineEditor.tsx  Settings.tsx  SlidePreview.tsx
frontend/src/store/: useProjectStore.ts
frontend/src/tests/components/: DescriptionCard.test.tsx  Markdown.test.tsx
frontend/src/types/: index.ts
frontend/src/utils/: projectUtils.ts
v0_demo/: lazyllm_genai.py
(+1 files in other folders)
